--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "module": "nodenext",
     "erasableSyntaxOnly": true,
     "verbatimModuleSyntax": true,
-    "skipLibCheck": true
+    "allowImportingTsExtensions": true,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "sinho"
   }
 }
