--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "verbatimModuleSyntax": true,
     "allowImportingTsExtensions": true,
     "skipLibCheck": true,
+    "strict": true,
     "jsx": "react-jsx",
     "jsxImportSource": "sinho"
   }
