--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@rspack/cli": "^1.7.4",
     "@rspack/core": "^1.7.4",
+    "@types/node": "^25.1.0",
     "typescript": "^5.9.3"
   }
 }
