--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "colorthief": "^2.6.0",
+    "exifr": "^7.1.3",
+    "marked": "^17.0.1",
     "sinho": "^0.3.1"
   },
   "devDependencies": {
